musl/issues/SharedObject.out
* installing to library '/home/runner/R-patched/lib'
Warning: SystemRequirements specified C++11: support has been removed
* installing *source* package 'SharedObject' ...
** this is package 'SharedObject' version '1.25.0'
** using staged installation
checking for gcc... gcc -std=gnu23
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether gcc -std=gnu23 accepts -g... yes
checking for gcc -std=gnu23 option to accept ISO C89... none needed
checking for shm_open in -lrt... yes
configure: creating ./config.status
config.status: creating src/Makevars
** libs
specified C++11
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/BIOC/SharedObject/src'
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/BH/include' -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c C_interface.cpp -o C_interface.o
C_interface.cpp: In function 'int C_getObject(SEXP)':
C_interface.cpp:166:16: error: 'OBJECT' was not declared in this scope
  166 |         return OBJECT(x);
      |                ^~~~~~
C_interface.cpp: In function 'void C_setObject(SEXP, int)':
C_interface.cpp:171:9: error: 'SET_OBJECT' was not declared in this scope
  171 |         SET_OBJECT(x, i);
      |         ^~~~~~~~~~
C_interface.cpp: In function 'bool C_ISS4(SEXP)':
C_interface.cpp:176:16: error: 'IS_S4_OBJECT' was not declared in this scope
  176 |         return IS_S4_OBJECT(x);
      |                ^~~~~~~~~~~~
C_interface.cpp: In function 'void C_SETS4(SEXP)':
C_interface.cpp:181:9: error: 'SET_S4_OBJECT' was not declared in this scope
  181 |         SET_S4_OBJECT(x);
      |         ^~~~~~~~~~~~~
C_interface.cpp: In function 'void C_UNSETS4(SEXP)':
C_interface.cpp:186:9: error: 'UNSET_S4_OBJECT' was not declared in this scope
  186 |         UNSET_S4_OBJECT(x);
      |         ^~~~~~~~~~~~~~~
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:199: C_interface.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/BIOC/SharedObject/src'
make[1]: Entering directory '/var/local/PKGS/BIOC/SharedObject/src'
make[1]: Leaving directory '/var/local/PKGS/BIOC/SharedObject/src'
ERROR: compilation failed for package 'SharedObject'
* removing '/home/runner/R-patched/lib/SharedObject'
* restoring previous '/home/runner/R-patched/lib/SharedObject'
